--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
+    "mongoose": "^8.6.3",
     "morgan": "^1.10.0",
     "uuid": "^10.0.0"
   }
